src/main/java/com/example/demo/__core/errors/Ex500.java
package com.example.demo.__core.errors;

public class Ex500 extends RuntimeException{
	public Ex500(String msg) {
		super(msg);
	}
}

